fix text bubble wrapping

--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -68,12 +68,13 @@ body, html {
 }
 
 .text-bubble {
-    max-width: 60%;
+    max-width: 70%;
+    width: fit-content;
     border-radius: 24px;
     background-color: #3f3f46;
     color: white;
     padding: 8px 16px;
-    font-size: 1.1em;
+    font-size: 1.05em;
     margin: 0 16px 8px 0;
     margin-left: auto;
 }
